# supervm

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  deny.toml  package.json  rust-toolchain.toml
.cargo/: config.toml
.github/: copilot-instructions.md
aoem/: INSTALL-INFO.txt
config/: novovm-adapter-compatibility-matrix.json  novovm-adapter-plugin-registry.json  novovm-consensus-policy.json
crates/gateways/evm-gateway/: Cargo.toml
crates/gateways/evm-gateway/src/: main.rs  main_tests.rs  rpc_error_http.rs  rpc_eth_query_helpers.rs  rpc_eth_receipts.rs  rpc_eth_state.rs  rpc_eth_sync.rs  rpc_eth_txpool.rs  rpc_eth_upstream.rs  rpc_gateway_exec_cfg.rs  rpc_gateway_ops.rs  rpc_params_utils.rs
crates/novovm-adapter-api/: Cargo.toml
crates/novovm-adapter-api/src/: bincode_compat.rs  chain_adapter.rs  evm_mirror.rs  ir.rs  lib.rs  unified_account.rs
crates/novovm-adapter-api/tests/: ir_smoke.rs  unified_account_smoke.rs
crates/novovm-adapter-novovm/: Cargo.toml
crates/novovm-adapter-novovm/src/: lib.rs
crates/novovm-adapter-novovm/tests/: native_adapter_smoke.rs
crates/novovm-adapter-sample-plugin/: Cargo.toml
crates/novovm-adapter-sample-plugin/src/: bincode_compat.rs  lib.rs
crates/novovm-bench/: Cargo.toml
crates/novovm-bench/src/: bincode_compat.rs
crates/novovm-consensus/: Cargo.toml
crates/novovm-consensus/examples/: consensus_negative_smoke.rs
crates/novovm-consensus/src/: account_index.rs  bft_engine.rs  epoch.rs  governance_verifier.rs  lib.rs  market_engine.rs  protocol.rs  quorum_cert.rs  token_runtime.rs  types.rs
crates/novovm-coordinator/: Cargo.toml
crates/novovm-coordinator/examples/: coordinator_negative_smoke.rs  two_pc_smoke.rs
crates/novovm-coordinator/src/: lib.rs
crates/novovm-edge-gateway/: Cargo.toml
crates/novovm-edge-gateway/src/: main.rs  main_tests.rs  rpc_error_http.rs  rpc_eth_state.rs  rpc_eth_txpool.rs  rpc_gateway_exec_cfg.rs  rpc_params_utils.rs
crates/novovm-exec/: Cargo.toml
crates/novovm-exec/examples/: capability_contract_dump.rs  main_path_template.rs
crates/novovm-exec/src/: ingress_codec.rs  lib.rs
crates/novovm-network/: Cargo.toml
crates/novovm-network/src/: eth_chain_config.rs  eth_fullnode.rs  eth_rlpx.rs  eth_runtime_config.rs  eth_selection_config.rs  gossip.rs  lib.rs  route.rs  runtime_status.rs  transport.rs
crates/novovm-network/src/availability/: audit.rs  controller.rs  decision.rs  mod.rs  mode.rs  queue.rs  reconcile.rs  replay.rs
crates/novovm-network/src/capability/: mod.rs
crates/novovm-network/src/relay/: client.rs  frame.rs  mod.rs  server.rs
crates/novovm-network/src/routing/: l3_regional.rs  l4_local.rs  mod.rs  selector.rs  sync.rs  types.rs
crates/novovm-node/: Cargo.toml
crates/novovm-node/src/: clearing_router.rs  clearing_types.rs  governance_surface.rs  governance_verifier_ext.rs  lib.rs  liquidity_sources.rs  main.rs  mainline_canonical.rs  mainline_duty_report.rs  mainline_preflight.rs  mainline_query.rs  mainline_soak.rs  treasury_settlement.rs  tx_ingress.rs
crates/novovm-node/tests/: queue_replay_smoke.rs
crates/novovm-node/tests/fixtures/geth-parity/: README.md  adapter-e2e-default.sample.json  geth-blob-tx-failure.sample.json  geth-blob-tx-success.sample.json  geth-create-contract-with-access-list.sample.json  geth-deploy-fail-revert.sample.json  geth-deploy-success-with-logs.sample.json  geth-dynamic-tx-failure.sample.json  geth-legacy-with-logs.sample.json  geth-reorg-dual-tx.sample.json  geth-type2-intrinsic-gas-low.sample.json  geth-type2-priority-over-max-fee.sample.json
crates/novovm-node/tests/fixtures/geth-parity-external/: README.md  ethapi-blob-tx-success.sample.json  ethapi-blockreceipts-blob-tx.sample.json  ethapi-blockreceipts-contract-create-tx.sample.json  ethapi-blockreceipts-dynamic-fee-tx.sample.json  ethapi-blockreceipts-legacy-contract-call-tx.sample.json  ethapi-blockreceipts-legacy-transfer-tx.sample.json  ethapi-create-contract-tx.sample.json  ethapi-create-contract-with-access-list.sample.json  ethapi-dynamic-tx-failure.sample.json  ethapi-legacy-with-logs.sample.json  ethapi-normal-transfer-tx.sample.json
crates/novovm-protocol/: Cargo.toml
crates/novovm-protocol/src/: block_binding.rs  block_wire.rs  ids.rs  lib.rs  messages.rs  protocol_catalog.rs  tx_wire.rs  wire.rs
crates/novovm-prover/: Cargo.toml
crates/novovm-prover/examples/: capability_bridge_dump.rs  contract_schema_negative_smoke.rs  contract_schema_smoke.rs
crates/novovm-prover/src/: lib.rs
crates/novovm-rollout-policy/: Cargo.toml
crates/novovm-rollout-policy/src/: error.rs  lib.rs  main.rs  output.rs
crates/novovm-rollout-policy/src/cli/: failover.rs  mod.rs  overlay.rs  risk.rs  rollout.rs
crates/novovm-rollout-policy/src/commands/: failover.rs  legacy.rs  mod.rs  overlay.rs  risk.rs  rollout.rs
crates/novovm-rollout-policy/src/policy/: mod.rs
crates/novovm-rollout-policy/src/policy/failover/: mod.rs  policy_matrix_build.rs  region_evaluate.rs  seed_evaluate.rs
crates/novovm-rollout-policy/src/policy/overlay/: auto_profile.rs  mod.rs  relay_discovery_merge.rs  relay_health_refresh.rs
crates/novovm-rollout-policy/src/policy/risk/: action_eval.rs  action_matrix_build.rs  blocked_map_build.rs  blocked_select.rs  circuit_breaker_evaluate.rs  level_set.rs  matrix_select.rs  mod.rs  policy_profile_select.rs  slo_evaluate.rs
crates/novovm-rollout-policy/src/policy/rollout/: controller_dispatch_evaluate.rs  decision_dashboard_consumer.rs  decision_dashboard_export.rs  decision_delivery.rs  decision_route.rs  mod.rs
crates/plugins/evm/core/: Cargo.toml
crates/plugins/evm/core/src/: lib.rs
crates/plugins/evm/plugin/: Cargo.toml
crates/plugins/evm/plugin/src/: bincode_compat.rs  lib.rs
docs/: AOEM-FFI-BETA08-INTEGRATION-2026-03-01.md  CURRENT-AUTHORITATIVE-ENTRYPOINT-2026-04-17.md  INDEX.md  NOVOVM-NAMING-CONVENTION.md  README.zh-CN.md
docs_CN/: AOEM-BETA08-TRUST-PACK-CHECKLIST-2026-03-02.md  CURRENT-AUTHORITATIVE-ENTRYPOINT-2026-04-17.md  INDEX-DESCRIPTIONS.md  INDEX.md  NOVOVM-L1-L4-ROADMAP-v1-2026-03-22.md  (+33 more)
(+479 files in other folders)
