[workspace]
members = [
    "crates/aoem-bindings",
    "crates/novovm-adapter-api",
    "crates/novovm-adapter-novovm",
    "crates/gateways/evm-gateway",
    "crates/novovm-adapter-sample-plugin",
    "crates/plugins/evm/plugin",
    "crates/novovm-bench",
    "crates/novovm-consensus",
    "crates/novovm-coordinator",
    "crates/novovm-exec",
    "crates/novovm-network",
    "crates/novovm-node",
    "crates/novovm-rollout-policy",
    "crates/novovmctl",
    "crates/novovm-protocol",
    "crates/novovm-prover",
    "vendor/web30-core",
]
resolver = "2"
