[package]
name = "novovm-adapter-api"
version = "0.1.0"
edition = "2021"
authors = ["SuperVM Core Team"]
description = "NOVOVM adapter API: IR types + adapter traits (host-facing), no L0 implementation."

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
bincode = "1.3"
sha2 = "0.10"
serde_json = { version = "1", optional = true }

[features]
# Keep compatibility with older code that uses `#[cfg(feature = "serde_json")]`.
serde_json = ["dep:serde_json"]
