[package]
name = "novovm-adapter-novovm"
version = "0.1.0"
edition = "2021"
authors = ["SuperVM Core Team"]
description = "Native NOVOVM adapter implementation (default native backend)."

[dependencies]
anyhow = "1"
bincode = "1.3"
dashmap = "6.1"
ed25519-dalek = "2"
serde_json = "1"
sha2 = "0.10"
novovm-adapter-api = { path = "../novovm-adapter-api" }
web30-core = { path = "../../vendor/web30-core" }
