[package]
name = "novovm-adapter-novovm"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
authors = ["SuperVM Core Team"]
description = "Native NOVOVM adapter implementation (default native backend)."

[dependencies]
anyhow = "1"
postcard = { version = "1", default-features = false, features = ["alloc"] }
dashmap = "6.1"
ed25519-dalek = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
aoem-bindings = { path = "../aoem-bindings" }
novovm-adapter-api = { path = "../novovm-adapter-api" }
web30-core = { path = "../../vendor/web30-core" }
novovm-adapter-evm-core = { path = "../plugins/evm/core" }

