[package]
name = "novovm-adapter-sample-plugin"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
authors = ["SuperVM Core Team"]
description = "Sample dynamic adapter plugin for NOVOVM (C ABI)."

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1"
bincode = "1.3"
sha2 = "0.10"
novovm-adapter-api = { path = "../novovm-adapter-api" }
novovm-adapter-novovm = { path = "../novovm-adapter-novovm" }
