[package]
name = "novovm-coordinator"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
authors = ["SuperVM Core Team"]
description = "NOVOVM distributed coordinator migration skeleton (2PC control plane)."

[dependencies]
anyhow = "1"
novovm-protocol = { path = "../novovm-protocol" }
