[package]
name = "novovm-edge-gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
bincode = "1.3"
novovm-adapter-api = { path = "../novovm-adapter-api" }
novovm-adapter-evm-core = { path = "../novovm-adapter-evm-core" }
novovm-exec = { path = "../novovm-exec" }
rocksdb = { version = "0.22", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tiny_http = "0.12"
