[package]
name = "novovm-exec"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"

[dependencies]
anyhow = "1"
aoem-bindings = { path = "../aoem-bindings" }
novovm-adapter-api = { path = "../novovm-adapter-api" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sha3 = "0.10"
