[package]
name = "novovm-network"
version = "0.1.0"
edition = "2021"
authors = ["SuperVM Core Team"]
description = "NOVOVM network abstraction (transport traits + in-memory impl)."

[dependencies]
novovm-protocol = { path = "../novovm-protocol" }
thiserror = "1"
dashmap = "6.1"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["sync", "time", "rt", "macros"] }
