[package]
name = "novovm-network"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
authors = ["SuperVM Core Team"]
description = "NOVOVM network abstraction (transport traits + in-memory impl)."

[dependencies]
aes = "0.8"
ctr = "0.9"
dashmap = "6.1"
hmac = "0.12"
k256 = { version = "0.13", features = ["ecdsa", "ecdh", "arithmetic"] }
novovm-protocol = { path = "../novovm-protocol" }
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sha3 = "0.10"
snap = "1"
thiserror = "1"
tokio = { version = "1", features = ["sync", "time", "rt", "macros"] }
