[package]
name = "novovm-node"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
novovm-exec = { path = "../novovm-exec" }
novovm-consensus = { path = "../novovm-consensus" }
novovm-network = { path = "../novovm-network" }
novovm-protocol = { path = "../novovm-protocol" }
novovm-adapter-api = { path = "../novovm-adapter-api" }
novovm-adapter-novovm = { path = "../novovm-adapter-novovm" }
novovm-adapter-evm-core = { path = "../novovm-adapter-evm-core" }
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
sha2 = "0.10"
libloading = "0.8"
bincode = "1.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tiny_http = "0.12"
rocksdb = { version = "0.22", default-features = false }

[dev-dependencies]
aoem-bindings = { path = "../aoem-bindings" }
