[package]
name = "novovm-node"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
autobins = false

[dependencies]
anyhow = "1"
novovm-exec = { path = "../novovm-exec" }
novovm-consensus = { path = "../novovm-consensus" }
novovm-network = { path = "../novovm-network" }
novovm-protocol = { path = "../novovm-protocol" }
novovm-adapter-api = { path = "../novovm-adapter-api" }
novovm-adapter-novovm = { path = "../novovm-adapter-novovm" }
novovm-adapter-evm-core = { path = "../plugins/evm/core" }
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
sha2 = "0.10"
libloading = "0.8"
postcard = { version = "1", default-features = false, features = ["alloc"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
tiny_http = "0.12"
rocksdb = { version = "0.22", default-features = false }
ureq = "2"
lettre = "0.11"

[dev-dependencies]
aoem-bindings = { path = "../aoem-bindings" }

[[bin]]
name = "novovm-node"
path = "src/bin/novovm-node.rs"

[[bin]]
name = "supervm-mainline-gate"
path = "src/bin/supervm-mainline-gate.rs"

[[bin]]
name = "supervm-mainline-preflight"
path = "src/bin/supervm-mainline-preflight.rs"
