[package]
name = "novovm-prover"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
authors = ["SuperVM Core Team"]
description = "NOVOVM prover capability bridge (F-09/F-15 migration scaffold)."

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
novovm-exec = { path = "../novovm-exec" }
