[package]
name = "novovm-rollout-policy"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
autobins = false

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
ureq = "2"
lettre = "0.11"

[[bin]]
name = "novovm-rollout-policy"
path = "src/main.rs"

# Overlay policy tools
# Rollout policy tools
# Risk policy tools
# Failover policy tools

