[package]
name = "novovm-evm-gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
bincode = "1.3"
dashmap = "6.1"
novovm-adapter-api = { path = "../../novovm-adapter-api" }
novovm-adapter-evm-core = { path = "../../plugins/evm/core" }
novovm-adapter-evm-plugin = { path = "../../plugins/evm/plugin" }
novovm-adapter-novovm = { path = "../../novovm-adapter-novovm" }
novovm-exec = { path = "../../novovm-exec" }
novovm-network = { path = "../../novovm-network" }
novovm-protocol = { path = "../../novovm-protocol" }
rocksdb = { version = "0.22", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sha3 = "0.10"
tiny_http = "0.12"

[dev-dependencies]
web30-core = { path = "../../../vendor/web30-core" }
