[package]
name = "novovm-evm-gateway"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"

[dependencies]
anyhow = "1"
aes = "0.8"
postcard = { version = "1", default-features = false, features = ["alloc"] }
ctr = "0.9"
dashmap = "6.1"
ed25519-dalek = { version = "2", features = ["rand_core"] }
hmac = "0.12"
k256 = { version = "0.13", features = ["ecdsa", "ecdh", "arithmetic"] }
novovm-adapter-api = { path = "../../novovm-adapter-api" }
novovm-adapter-evm-core = { path = "../../plugins/evm/core" }
novovm-adapter-evm-plugin = { path = "../../plugins/evm/plugin" }
novovm-adapter-novovm = { path = "../../novovm-adapter-novovm" }
novovm-exec = { path = "../../novovm-exec" }
novovm-network = { path = "../../novovm-network" }
novovm-protocol = { path = "../../novovm-protocol" }
rand = "0.8"
rocksdb = { version = "0.22", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sha3 = "0.10"
snap = "1"
tiny_http = "0.12"
ureq = { version = "2.12", features = ["json"] }

[dev-dependencies]
web30-core = { path = "../../../vendor/web30-core" }

