[package]
name = "novovm-adapter-evm-core"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
authors = ["SuperVM Core Team"]
description = "Shared EVM semantics core for NOVOVM adapters/plugins."

[dependencies]
anyhow = "1"
aoem-bindings = { path = "../../../aoem-bindings" }
k256 = { version = "0.13", features = ["ecdsa"] }
novovm-adapter-api = { path = "../../../novovm-adapter-api" }
sha3 = "0.10"
